neutron-mail/feat - add footer section neutron-mail/style - style footer && responsive design

--- a/NeutronMail/src/index.html
+++ b/NeutronMail/src/index.html
@@ -124,74 +124,83 @@
             <span class="section-customers__block"></span>
         </section>
 
+
+        <section class="grid section-carousel">
+
+        </section>
+
     </main>
 
 
-    <footer class="footer-block">
-        <!--        <div>-->
-        <!--            <span class="span-image footer-block__partners-list"></span>-->
+    <footer>
+        <div class="grid footer-block">
+            <div class="footer-block__top-text">
+                <p>Those, who help us secure your privacy</p>
+            </div>
 
-        <!--            <div class="row">-->
-        <!--                <div class="column">-->
-        <!--                    <section>-->
-        <!--                        <div class="footer-block__general-info">-->
-        <!--                            <p class="text-gray&#45;&#45;5c">General: <span class="_700">contact@neutronmail.ch</span></p>-->
-        <!--                            <p class="text-gray&#45;&#45;5c">Media: <span class="_700">media@neutronmail.ch</span></p>-->
-        <!--                            <p class="text-gray&#45;&#45;5c"> Security: <span class="_700">security@neutronmail.ch</span></p>-->
-        <!--                            <p class="text-gray&#45;&#45;5c">For support inquiries, please visit</p>-->
-        <!--                            <p class="text-gray&#45;&#45;5c"><span class="_700">neutronmail.com/support</span></p>-->
-        <!--                        </div>-->
+            <div class="footer-block__top-image">
+                <span></span>
+            </div>
 
-        <!--                        <div class="footer-block__links">-->
-        <!--                            <ul class="flex-container">-->
-        <!--                                <li class="nav-item"><a href="#" class="nav-link">English</a></li>-->
-        <!--                                <li class="nav-item"><a href="#" class="nav-link">French</a></li>-->
-        <!--                                <li class="nav-item"><a href="#" class="nav-link">Italian</a></li>-->
-        <!--                                <li class="nav-item"><a href="#" class="nav-link">Polish</a></li>-->
-        <!--                            </ul>-->
-        <!--                        </div>-->
-        <!--                    </section>-->
-        <!--                </div>-->
+            <div class="grid footer-block__main">
 
-        <!--                <div class="column">-->
-        <!--                    <section class="footer-block__company-info text-align-end">-->
-        <!--                        <h4>Company</h4>-->
-        <!--                        <ul>-->
-        <!--                            <li>Blog<span>&#9608;</span></li>-->
-        <!--                            <li>Team<span>&#9608;</span></li>-->
-        <!--                            <li>Careers<span>&#9608;</span></li>-->
-        <!--                            <li>Support<span>&#9608;</span></li>-->
-        <!--                            <li>Donate<span>&#9608;</span></li>-->
-        <!--                        </ul>-->
-        <!--                    </section>-->
-        <!--                </div>-->
+                <div class="footer-block__main__general-info">
+                    <p class="text-gray--5c">General:<a href="mailto:name@mydomain.com">contact@neutronmail.ch</a></p>
 
-        <!--                <div class="column">-->
-        <!--                    <section class="footer-block__legal-info text-align-end">-->
-        <!--                        <h4>Legal</h4>-->
-        <!--                        <ul>-->
-        <!--                            <li>Imprint<span>&#9608;</span></li>-->
-        <!--                            <li>Privacy Policy<span>&#9608;</span></li>-->
-        <!--                            <li>Terms & Conditions<span>&#9608;</span></li>-->
-        <!--                            <li>Report Abuse<span>&#9608;</span></li>-->
-        <!--                        </ul>-->
-        <!--                    </section>-->
-        <!--                </div>-->
+                    <p class="text-gray--5c">Media: <a href="mailto:name@mydomain.com">media@neutronmail.</a></p>
 
-        <!--                <div class="column">-->
-        <!--                    <section class="footer-block__neutronmail-info text-align-end">-->
-        <!--                        <h4>NeutronMail</h4>-->
-        <!--                        <ul>-->
-        <!--                            <li>Pricing<span>&#9608;</span></li>-->
-        <!--                            <li>Security<span>&#9608;</span></li>-->
-        <!--                            <li>Shop<span>&#9608;</span></li>-->
-        <!--                            <li>Press/Media Kit<span>&#9608;</span></li>-->
-        <!--                            <li>Onion Site<span>&#9608;</span></li>-->
-        <!--                        </ul>-->
-        <!--                    </section>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
+                    <p class="text-gray--5c">Security: <a href="mailto:name@mydomain.com">security@neutronmail.ch</a>
+                    </p>
+
+                    <p class="text-gray--5c"> For support inquiries, please visit</p>
+                    <span class="text-gray--5c"> neutronmail.com/support</span>
+                </div>
+
+                <article class="footer-block__main__company-info">
+                    <h2>Company</h2>
+                    <ul>
+                        <li>Blog<span>&#9608;</span></li>
+                        <li>Team<span>&#9608;</span></li>
+                        <li>Careers<span>&#9608;</span></li>
+                        <li>Support<span>&#9608;</span></li>
+                        <li>Donate<span>&#9608;</span></li>
+                    </ul>
+                </article>
+
+                <article class="footer-block__main__legal-info">
+                    <h2>Legal</h2>
+                    <ul>
+                        <li>Imprint<span>&#9608;</span></li>
+                        <li>Privacy Policy<span>&#9608;</span></li>
+                        <li>Terms & Conditions<span>&#9608;</span></li>
+                        <li>Report Abuse<span>&#9608;</span></li>
+                    </ul>
+                </article>
+
+                <article class="footer-block__main__neutronMail-info">
+                    <h2>NeutronMail</h2>
+                    <ul>
+                        <li>Pricing<span>&#9608;</span></li>
+                        <li>Security<span>&#9608;</span></li>
+                        <li>Shop<span>&#9608;</span></li>
+                        <li>Press/Media Kit<span>&#9608;</span></li>
+                        <li>Onion Site<span>&#9608;</span></li>
+                    </ul>
+                </article>
+
+
+                <div class="footer-block__bottom">
+                    <ul class="footer-block__bottom__breadcrumbs">
+                        <li><span>Facebook</span></li>
+                        <li><span>Twitter</span></li>
+                        <li><span>Google+</span></li>
+                        <li><span>Feedback Forum</span></li>
+                        <li><span>Reddit</span></li>
+                    </ul>
+                    <p class="footer-block__bottom__right-info">© 2017 Neutron Technologies AG. All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
     </footer>
 </div>
 
