--- a/NeutronMail/src/index.html
+++ b/NeutronMail/src/index.html
@@ -2,22 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Neutron Mail Website</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" rel="stylesheet">
 </head>
 <body>
 
-<div class="grid container">
+<div class="grid wrapper">
+
+    <div class="sm-menu-btn">
+        <span></span>
+    </div>
+
+    <div class="container--fixed-top-right">
+        <a href="#"><i class="fab fa-google-plus-square"></i></i></a>
+        <a href="#"><i class="fab fa-facebook-square"></i></a>
+        <a href="#"><i class="fab fa-twitter-square"></i></a>
+    </div>
+
     <header>
 
         <div class="header-navbar">
 
             <div class="grid header-navbar__links-group">
-                <span class="header-navbar__links-group__logo"></span>
+                <a href="#" class="header-navbar__links-group__logo"></a>
 
                 <nav class="hidden-sm">
-                    <ul>
+                    <ul class="grid nav">
                         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Security</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
@@ -35,18 +47,16 @@
                 </ul>
             </div>
 
-            <div class="header-navbar__languages">
-                <ul>
-                    <li class="nav-item"><a href="#" class="nav-link">English</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">French</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Italian</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Polish</a></li>
-                </ul>
-            </div>
+            <ul class="nav header-navbar__languages">
+                <li class="nav-item"><a href="#" class="nav-link">English</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">French</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Italian</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Polish</a></li>
+            </ul>
 
         </div>
 
-        <div class="header-main-content">
+        <section class="header-main-content container text-center">
             <h1>Secure Email Communication</h1>
             <h2>Based in <span class="text-red">Somewhere</span></h2>
 
@@ -64,12 +74,12 @@
                 </a>
 
             </div>
-        </div>
+        </section>
 
     </header>
 
     <main>
-        <section class="grid section-services">
+        <section class="grid section-services max-width-1400 center">
             <div class="section-services__top-left-border"></div>
 
             <div class="grid section-services__swiss-privacy__header">
@@ -125,8 +135,57 @@
         </section>
 
 
-        <section class="grid section-carousel">
+        <section class="grid section-slider max-width-1400 center">
 
+            <div class="grid section-slider__body">
+                <div class="section-slider__body__check-buttons">
+                    <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
+                    <input type="radio" name="slider" title="slide2" class="slider__nav"/>
+                    <input type="radio" name="slider" title="slide3" class="slider__nav"/>
+                </div>
+
+
+                <div class="section-slider__body__contents">
+                    <div class="slider__contents">
+                        <p class="slider__txt">
+                            A new email service being developed by a group from MIT and CERN promises to bring secure,
+                            encrypted email to the masses and keep sensitive information away from prying eyes.
+                            <span> — Boston Herald</span>
+                        </p>
+                    </div>
+
+                    <!-- TODO: add more slider sections on finish transition contents -->
+                </div>
+            </div>
+
+            <div></div>
+
+
+        </section>
+
+
+        <section class="grid section-blog">
+            <div class="section-blog__top-block text-right center">
+                <h2 class="_400">Any device, anywhere</h2>
+                <p class="_400">The NeutronMail inbox is optimized for productivity. Each detail within our
+                    secure email service is optimized to help you better read, organize, and send email.</p>
+
+                <span class="section-blog__btn-app-store"></span>
+                <span class="section-blog__btn-google-play"></span>
+            </div>
+
+            <div class="section-blog__bottom-block center">
+                <span class="section-blog__bottom-block__laptop-image"></span>
+                <h2 class="_400 text-center">Privacy is a fundamental human right.</h2>
+                <p class="_400 text-center">Your support helps us to protect privacy world-wide.</p>
+
+                <div class="section-blog__bottom-block__btns text-center">
+                    <span class="section-blog__bottom-block__upgrade-btn _700">
+                        <i class="fas fa-cloud-upload-alt _400"></i>Upgrade to Paid Plan</span>
+                    <span class="section-blog__bottom-block__donate__btn _700">
+                        <i class="fas fa-dollar-sign _400"></i>Donate</span>
+                </div>
+            </div>
         </section>
 
     </main>
