--- a/NeutronMail/src/index.html
+++ b/NeutronMail/src/index.html
@@ -180,10 +180,10 @@
                 <p class="_400 text-center">Your support helps us to protect privacy world-wide.</p>
 
                 <div class="section-blog__bottom-block__btns text-center">
-                    <span class="section-blog__bottom-block__upgrade-btn _700">
-                        <i class="fas fa-cloud-upload-alt _400"></i>Upgrade to Paid Plan</span>
-                    <span class="section-blog__bottom-block__donate__btn _700">
-                        <i class="fas fa-dollar-sign _400"></i>Donate</span>
+                    <a href="#" class="section-blog__bottom-block__upgrade-btn _700">
+                        <i class="fas fa-cloud-upload-alt _400"></i>Upgrade to Paid Plan</a>
+                    <a href="#" class="section-blog__bottom-block__donate__btn _700">
+                        <i class="fas fa-dollar-sign _400"></i>Donate</a>
                 </div>
             </div>
         </section>
